--- a/index2.html
+++ b/index2.html
@@ -7,26 +7,162 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="reset" href="reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.2/css/swiper.css"> 
+
 	<title>Teton Shop Summer</title>
-	<script>
-		/*JavaScript*/
-	</script>
+
 </head>
+
 <body>
+
+	<!--Header-->
 	<div class="hero-image">
         <div class="logo">
-	    	<img alt="logo" src="logo.png">
+        	<div class="row">
+        		<div class="col-1">
+        			<i class="material-icons">&#xe5c3;</i>
+        		</div>
+        		<div class="col-2">
+	    			<img alt="logo" src="/summer-header/images/logo.png">
+	    		</div>
+	    		<div class="col-3">
+	    			<span class="glyphicon glyphicon-search"></span>
+	    		</div>
+	    	</div>
         </div>
 	    <div class="cart">
 	    	<h1>My Cart</h1>
 	    </div>
 	    <div class="title">
-	    	<img alt="summertitle" src="summertitle.png">	
+	    	<img alt="summertitle" src="/summer-header/images/summertitle.png">	
 	    </div>
 	    <div class="button">
-   	   		 <button class="btn-video">Play the Video  <span class="glyphicon">&#xe029;</span></button>
+   	   		 <button class="btn-video">Play the Video<span class="glyphicon">&#xe029;</span></button>
    	    </div>
 	</div>
+<!--End Header-->
+
+<!--Infinite Scroller-->
+	<div class="swiper-container">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">enjoy <a class="scroller">free shipping</a> on orders over $50</div>
+			<div class="swiper-slide">TGR apparel delivered every other month <a class="scroller">find out more</a></div>
+			<div class="swiper-slide">enjoy <a class="scroller">free shipping</a> on orders over $50</div>
+			<div class="swiper-slide">TGR apparel delivered every other month <a class="scroller">find out more</a></div>
+		</div>
+	</div>
+<!--End Infinite Scroller-->
+
+<!--Section 1-->
+	<div class="section-one-row">
+		<div class="scrollable">
+		<div class="col-md-5" id="s1-ambassador">
+			<img src="/summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="ambassador-pic">
+			<div class="s1-ambassador-text"><div class="adventure-text">Adventure Much?</div> Spread the stoke and live the dream as part of the TGR </br>ambassador program.<i class="material-icons" id="adventure-arrow">&#xe5c8;
+			</i></div>
+
+		</div>
+		<div class="col-md-3">
+			<img src="/summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
+			<div class="shop-women-text">Shop Women<i class="material-icons" id="women-arrow">&#xe5c8;</i></div>
+			<img src="/summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
+			<div class="shop-men-text">Shop Men<i class="material-icons" id="men-arrow">&#xe5c8;</i></div>
+		</div>
+		<div class="col-md-4" id="s1-video">
+			<img src="/summer-header/images/IMG_8978.png" alt="Video" class="section-one-video"><i class="material-icons" id="play-arrow">play_arrow</i>
+		</div>
+		<!--Repeated Section One-->
+		<div class="col-md-5" id="s1-ambassador">
+			<img src="/summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="ambassador-pic">
+			<div class="s1-ambassador-text"><div class="adventure-text">Adventure Much?</div> Spread the stoke and live the dream as part of the TGR </br>ambassador program.<i class="material-icons" id="adventure-arrow">&#xe5c8;
+			</i></div>
+
+		</div>
+		<div class="col-md-3">
+			<img src="/summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
+			<div class="shop-women-text">Shop Women<i class="material-icons" id="women-arrow">&#xe5c8;</i></div>
+			<img src="/summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
+			<div class="shop-men-text">Shop Men<i class="material-icons" id="men-arrow">&#xe5c8;</i></div>
+		</div>
+		<div class="col-md-4" id="s1-video">
+			<img src="/summer-header/images/IMG_8978.png" alt="Video" class="section-one-video"><i class="material-icons" id="play-arrow">play_arrow</i>
+		</div>
+	</div>
+	</div>
+<!--End Section 1-->
+
+<!--TGR Most Wanted Title-->
+	<div class="mostwanted">TGR Most Wanted</div>
+
+<!--Section Two-->
+	<div class="s2-row">
+		<div class="col-md-3" id="leather-ad">
+			<img src="/summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="leather patch ad" id="ianimg">
+			<div class="headwear-caption-holder">
+				<div class="headwear">headwear</div>
+				<div class="headwear-caption">Leather Patch 5-Panel<div class="headwear-price">$20</div><i class="material-icons" id="headwear-add">add</i><i class="material-icons" id="headwear-arrow">&#xe5c8;</i></div>
+	   		 </div>		
+		</div>
+		<div class="col-md-3" id="hydro-ad">
+			<img src="/summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" id="accessoriesimg">
+			<div class="headwear-caption-holder">
+				<div class="headwear">accessories</div>
+				<div class="headwear-caption">HydroFlask 32oz<div class="headwear-price">$30</div><i class="material-icons" id="accessories-add">add</i><i class="material-icons" id="headwear-arrow">&#xe5c8;</i></div>
+				</div>
+			</div>
+		<div class="col-md-6" id="water-ad">
+			<img src="/summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" id="hydrowater">
+			<div class="hydro-title">32 oz HydroFlask</div>
+			<div class="hydro-text">Spread the stoke and live the dream as a part of the TGR </br>Ambassador program.</div>
+			<div class="hydro-bottom-container">
+				<button class="drinkwear">More Drinkwear<i class="material-icons" id="drinkwear-arrow">&#xe5c8;</i></button>
+				<button class="cart">Add to Cart<i class="material-icons" id="cart-add">add</i></button>
+			</div>
+		</div>
+	</div>
+	<div class="s2-row2">
+		<div class="col-md-3" id="hat1-ad">
+		<!--<img src="/summer-header/images/WP9A0791.jpg" alt="Hat Ad">-->
+		</div>
+		<div class="col-md-3" id="hat2-ad">
+
+		</div>
+	</div>
+
+
+<!--End Section Two-->	
+<!--JQuery-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.2/js/swiper.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+        
+			$('.title img').addClass('visible');
+
+			var swiper = new Swiper('.swiper-container', {
+     		  slidesPerView: 2.8,
+      		  spaceBetween: 6,
+      		  freeMode: true,
+     	      loop: true,
+     	      loopedSlides: 10000,
+     	      speed: 5000,
+     	      simulateTouch: false,
+     	      autoplay: {
+  			  delay: 1,
+   			  },
+      		  pagination: {
+       			el: '.swiper-pagination',
+       		    clickable: true,
+     		  },
+     		});
+
+       	});
+
+	</script>
+<!--End JQuery-->
+
 
 </body>
 </html>
