--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
         			<i class="material-icons">&#xe5c3;</i>
         		</div>
         		<div class="col-2">
-	    			<img alt="logo" src="/summer-header/images/logo.png">
+	    			<img alt="logo" src="summer-header/images/logo.png">
 	    		</div>
 	    		<div class="col-3">
 	    			<span class="glyphicon glyphicon-search"></span>
@@ -48,21 +48,21 @@
 <!--End Header-->
 
 <!--Infinite Scroller-->
-	<div class="swiper-container">
+	<!--<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">enjoy <a class="scroller">free shipping</a> on orders over $50</div>
 			<div class="swiper-slide">TGR apparel delivered every other month <a class="scroller">find out more</a></div>
 			<div class="swiper-slide">enjoy <a class="scroller">free shipping</a> on orders over $50</div>
 			<div class="swiper-slide">TGR apparel delivered every other month <a class="scroller">find out more</a></div>
 		</div>
-	</div>
+	</div>-->
 <!--End Infinite Scroller-->
 
 <!--Section 1-->
 	<div class="section-one-row">
 		<div class="scrollable">
 			<div class="col-md-5 scroller-element1">
-				<img src="/summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
+				<img src="summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
 				<div class="element1-text">
 					<div class="adventure-text">Adventure Much?
 					</div> Spread the stoke and live the dream as part of the TGR </br>ambassador program.
@@ -70,24 +70,24 @@
 				</div>
 			</div>
 			<div class="col-md-3">
-				<img src="/summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
+				<img src="summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
 				<div class="shop-women-text">Shop Women
 					<i class="material-icons shop-women-arrow">&#xe5c8;</i>
 				</div>
-				<img src="/summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
+				<img src="summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
 				<div class="shop-men-text">Shop Men
 					<i class="material-icons shop-men-arrow">&#xe5c8;</i>
 				</div>
 			</div>
 			<div class="col-md-4 scroller-element4">
-				<img src="/summer-header/images/IMG_8978.png" alt="Video" class="element4">
+				<img src="summer-header/images/IMG_8978.png" alt="Video" class="element4">
 				<i class="material-icons element4-arrow">play_arrow</i>
 			</div>
 
 <!--Repeated Section One-->
 
 			<div class="col-md-5 scroller-element1">
-				<img src="/summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
+				<img src="summer-header/images/adventuremuch.jpg" alt="Ambassador program picture" class="element1-pic">
 				<div class="element1-text">
 					<div class="adventure-text">Adventure Much?
 					</div> Spread the stoke and live the dream as part of the TGR </br>ambassador program.
@@ -95,17 +95,17 @@
 				</div>
 			</div>
 			<div class="col-md-3">
-				<img src="/summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
+				<img src="summer-header/images/@nickkalisz_DSC06789.jpg" alt="Shop Women" class="shop-women">
 				<div class="shop-women-text">Shop Women
 					<i class="material-icons shop-women-arrow">&#xe5c8;</i>
 				</div>
-				<img src="/summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
+				<img src="summer-header/images/shopm.jpg" alt="Shop Men" class="shop-men">
 				<div class="shop-men-text">Shop Men
 					<i class="material-icons shop-men-arrow">&#xe5c8;</i>
 				</div>
 			</div>
 			<div class="col-md-4 scroller-element4">
-				<img src="/summer-header/images/IMG_8978.png" alt="Video" class="element4">
+				<img src="summer-header/images/IMG_8978.png" alt="Video" class="element4">
 				<i class="material-icons element4-arrow">play_arrow</i>
 			</div>
 		</div>
@@ -120,7 +120,7 @@
 		<div class="vertical-scroller-area">
 			<div class="vertical-scroller">
 				<div class="col-md-3 mostwanted-ad1">
-					<img src="/summer-header/images/IAN.jpg" alt="leather patch ad" class="mostwanted-ad1-picture">
+					<img src="summer-header/images/IAN.jpg" alt="leather patch ad" class="mostwanted-ad1-picture">
 					<div class="headwear-caption-holder">
 						<div class="headwear">headwear</div>
 						<div class="headwear-caption">Leather Patch 5-Panel
@@ -131,7 +131,7 @@
 			   		</div>		
 				</div>
 				<div class="col-md-3 mostwanted-ad2">
-					<img src="/summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" class="accessoriesimg">
+					<img src="summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" class="accessoriesimg">
 					<div class="headwear-caption-holder">
 						<div class="headwear">accessories</div>
 						<div class="headwear-caption">HydroFlask 32oz
@@ -142,7 +142,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 hat1-ad">
-					<img src="/summer-header/images/WP9A0791.jpg" alt="Hat Ad" class="hat1ad">
+					<img src="summer-header/images/WP9A0791.jpg" alt="Hat Ad" class="hat1ad">
 					<div class="headwear-caption-holder">
 						<div class="headwear">apparel</div>
 						<div class="headwear-caption">Ride the Tetons Tee
@@ -153,7 +153,7 @@
 			   		</div>		
 				</div>
 				<div class="col-md-3 hat2-ad">
-					<img src="/summer-header/images/4045-BK-Lifestyleshot.jpg" alt="Hat Ad" class="hat2ad">
+					<img src="summer-header/images/4045-BK-Lifestyleshot.jpg" alt="Hat Ad" class="hat2ad">
 					<div class="headwear-caption-holder">
 						<div class="headwear">headwear</div>
 						<div class="headwear-caption">Alpine Cap
@@ -163,17 +163,44 @@
 						</div>
 			   		</div>		
 				</div>
+				<div class="col-md-3 socks-ad">
+					<img src="summer-header/images/ACCESSORIES.jpg" alt="Hat Ad" class="hat2ad">
+					<div class="headwear-caption-holder">
+						<div class="headwear">apparel</div>
+						<div class="headwear-caption">Let's Go America Socks
+							<div class="headwear-price">$20</div>
+							<i class="material-icons headwear-add">add</i>
+							<i class="material-icons headwear-arrow">&#xe5c8;</i>
+						</div>
+			   		</div>		
+				</div>
+				<div class="col-md-3 sweatshirt-ad">
+					<img src="/summer-header/images/738A0532.JPG" alt="Hat Ad" class="hat2ad">
+					<div class="headwear-caption-holder">
+						<div class="headwear">headwear</div>
+						<div class="headwear-caption">Alpine Cap
+							<div class="headwear-price">$20</div>
+							<i class="material-icons headwear-add">add</i>
+							<i class="material-icons headwear-arrow">&#xe5c8;</i>
+						</div>
+			   		</div>		
+				</div>
+				<div class="email-attention">Be the first to know.</div>
+				<div class="stay-updated">Stay updated with the latest ticket & merch sales.</div>
+				<div class="email-address">Email Address</div>
+				<button class="email">Subscribe<i class="material-icons lookbook-arrow">&#xe5c8;</i></button>
+
 			</div>
 		</div>
 		<div class="col-md-6 water-ad">
 			<div class="gallery">
-				<img src="/summer-header/images/hydro-black.jpg" alt="Hydroflask" class="gallery-image">
-				<img src="/summer-header/images/hydro-red.jpg" alt="Hydroflask" class="gallery-image">
-				<img src="/summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="gallery-image gallery-image-highlight">
-				<img src="/summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" class="gallery-image">
+				<img src="summer-header/images/hydro-black.jpg" alt="Hydroflask" class="gallery-image">
+				<img src="summer-header/images/hydro-red.jpg" alt="Hydroflask" class="gallery-image">
+				<img src="summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="gallery-image gallery-image-highlight">
+				<img src="summer-header/images/DSC00227.jpg" alt="Hydroflask Ad" class="gallery-image">
 			</div>	
 			<i class="material-icons gallery-arrow-left">arrow_back</i>
-			<img src="/summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="main-gallery-image" id="main-gallery-image">
+			<img src="summer-header/images/hydro-flask-stainless-steel-vacuum-insulated-water-bottle-32-oz-wide-mouth-flex-cap-cobalt.jpg" alt="HydroFlask" class="main-gallery-image" id="main-gallery-image">
 			<i class="material-icons gallery-arrow">&#xe5c8;</i>
 			<div class="largeAd-title">32 oz HydroFlask</div>
 			<div class="largeAd-text">Spread the stoke and live the dream as a part of the TGR </br>Ambassador program.</div>
@@ -197,8 +224,8 @@
 		<p class="explore-nav1">TGR Shop Blog</p>
 		<p class="explore-nav2">Lookbooks</p>
 	</div>
-	<img src="/summer-header/images/bikerbackground.JPG" alt="Background Image" class="explore-background">
-	<img src="/summer-header/images/bikerimage.JPG" alt="Main Image" class="explore-image">
+	<img src="summer-header/images/bikerbackground.JPG" alt="Background Image" class="explore-background">
+	<img src="summer-header/images/bikerimage.JPG" alt="Main Image" class="explore-image">
 	<div class="sidebar">Lookbook
 		<div class="sidebar-title">Summer Styles: Part 1
 			<div class="year">2018</div>
@@ -219,7 +246,7 @@
 	<div class="scrollarea">
 		<div class="scrollable2">
 			<div class="col-md-2 scroll2-element1">
-				<img src="/summer-header/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
+				<img src="summer-header/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Hadley</br>Hammer</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -227,7 +254,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element2">
-				<img src="/summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
+				<img src="summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Ian</br>McIntosh</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -235,7 +262,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element3">
-				<img src="/summer-header/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
+				<img src="summer-header/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Sage</br>Name</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -243,7 +270,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element4">
-				<img src="/summer-header/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
+				<img src="summer-header/images/DSC00181.jpg" alt="Hadley Hammer" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Hadley</br>Hammer</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -251,7 +278,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element5">
-				<img src="/summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
+				<img src="summer-header/images/Ian_McIntosh_AK_2016__0222.jpg" alt="Ian McIntosh" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-athlete">Snow Athlete</div>
 				<div class="scroll2-name">Ian</br>McIntosh</div>
@@ -260,7 +287,7 @@
 			</div>
 
 			<div class="col-md-2 scroll2-element6">
-				<img src="/summer-header/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
+				<img src="summer-header/images/Sage_2015_414.jpg" alt="Sage" class="scroll2-image">
 				<div class="scroll2-background"></div>
 				<div class="scroll2-name">Sage</br>Name</div>
 				<button class="pro1">View Athlete Profile</button>
@@ -280,36 +307,36 @@
 	</div>
 	<div class="posts-container">
 		<div class="col-sm-4 socialpost">
-			<img src="/summer-header/images/instagram-color.png" alt="Instagram" class="instagramincolor">
-			<img src="/summer-header/images/tim-profile.jpg" alt="Tim Durtschi" class="social-profile">
+			<img src="summer-header/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+			<img src="summer-header/images/tim-profile.jpg" alt="Tim Durtschi" class="social-profile">
 			<div class="social-name">Tim Durtschi</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">02.16.2018</div>
-			<img src="/summer-header/images/tim-photo.png" alt="Social post" class="social-picture">
+			<img src="summer-header/images/tim-photo.png" alt="Social post" class="social-picture">
 		</div>
 		<div class="col-sm-4 socialpost">
-			<img src="/summer-header/images/facebook-color.png" alt="Facebook" class="facebookincolor">
-			<img src="/summer-header/images/jeremy-profile.jpg" alt="Jeremy Jones" class="social-profile">
+			<img src="summer-header/images/facebook-color.png" alt="Facebook" class="facebookincolor">
+			<img src="summer-header/images/jeremy-profile.jpg" alt="Jeremy Jones" class="social-profile">
 			<div class="social-name">Jeremy Jones</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">02.04.2018</div>
-			<img src="/summer-header/images/jeremy-post.jpg" alt="Jeremy's Post" class="social-picture">
+			<img src="summer-header/images/jeremy-post.jpg" alt="Jeremy's Post" class="social-picture">
 		</div>
 		<div class="col-sm-4 socialpost">
-			<img src="/summer-header/images/facebook-color.png" alt="Facebook" class="facebookincolor">
-			<img src="/summer-header/images/johnny-profile.jpg" alt="Johnny Collinson" class="social-profile">
+			<img src="summer-header/images/facebook-color.png" alt="Facebook" class="facebookincolor">
+			<img src="summer-header/images/johnny-profile.jpg" alt="Johnny Collinson" class="social-profile">
 			<div class="social-name">Johnny Collinson</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">02.06.2018</div>
-			<img src="/summer-header/images/johnny-post.jpg" alt="Johnny's Post" class="social-picture">
+			<img src="summer-header/images/johnny-post.jpg" alt="Johnny's Post" class="social-picture">
 		</div>
 		<div class="col-sm-4 socialpost">
-			<img src="/summer-header/images/instagram-color.png" alt="Instagram" class="instagramincolor">
-			<img src="/summer-header/images/angel-profile.jpg" alt="Angel Collinson" class="social-profile">
+			<img src="summer-header/images/instagram-color.png" alt="Instagram" class="instagramincolor">
+			<img src="summer-header/images/angel-profile.jpg" alt="Angel Collinson" class="social-profile">
 			<div class="social-name">Angel Collinson</div>
 			<div class="social-posted">posted a photo</div>
 			<div class="social-date">01.14.2018</div>
-			<img src="/summer-header/images/angel-picture.jpg" alt="Angel's Post" class="social-picture">
+			<img src="summer-header/images/angel-picture.jpg" alt="Angel's Post" class="social-picture">
 		</div>
 	</div>
 <!--End Section Five-->
@@ -322,11 +349,11 @@
 			<div class="days-of-week">weekdays&nbsp;&nbsp;9am - 6pm</br>saturday&nbsp;&nbsp;12pm - 6pm</br>sunday&nbsp;&nbsp;&nbsp; closed</div>
 		</div>
 		<div class="col-md-4">
-			<img src="/summer-header/images/logowhite.png" alt="Footer Logo" class="footer-logo">
-			<img src="/summer-header/images/instagram.png" alt="Instagram" class="instagram">
-			<img src="/summer-header/images/facebook-logo.png" alt="Facebook" class="facebook">
-			<img src="/summer-header/images/vimeo-logo.png" alt="Vimeo" class="vimeo">
-			<img src="/summer-header/images/twitter-logo-silhouette.png" alt="Twitter" class="twitter">
+			<img src="summer-header/images/logowhite.png" alt="Footer Logo" class="footer-logo">
+			<img src="summer-header/images/instagram.png" alt="Instagram" class="instagram">
+			<img src="summer-header/images/facebook-logo.png" alt="Facebook" class="facebook">
+			<img src="summer-header/images/vimeo-logo.png" alt="Vimeo" class="vimeo">
+			<img src="summer-header/images/twitter-logo-silhouette.png" alt="Twitter" class="twitter">
 		</div>
 		<div class="col-md-4">
 			<div class="phone-number two">(307)734-8192</div>
