--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 <!--Header-->
 	<div class="logo">
         <div class="row">
-        	<div class="dropdown">
-	       		<button class="dropbtn">
-	       			<i class="material-icons">&#xe5c3;</i>
-	       		</button>
-	       		<div class="dropdown-content">
-	       			<a href="#">Women</a>
-	       			<a href="#">Men</a>
-	       			<a href="#">Films</a>
+        	<div class="navigation">
+	        	<div class="dropdown">
+		       		<button class="dropbtn">
+		       			<i class="material-icons">&#xe5c3;</i>
+		       		</button>
+		       		<div class="dropdown-content">
+		       			<a href="#">Women</a>
+		       			<a href="#">Men</a>
+		       			<a href="#">Films</a>
+		       		</div>
 	       		</div>
-       		</div>
+	       	</div>
        		<div class="col-2">
     			<img alt="logo" src="assets/images/logo.png">
     		</div>
