--- a/headwear.html
+++ b/headwear.html
@@ -73,11 +73,11 @@
 						    	<li class="li-margin1"><a href="#sale" class="link subheader-link special">Sale</a></li>
 						    </ul>    
 						</div>
-						<div class="login-menu">
+						<div class="your-menu">
+							<img src="assets/images/a-biker.jpg" alt="Your Profile" class="your-hero">
+							<div class="your-overlay"></div>
 						</div>
 					</div>
-				</div>
-				<div class="menu-profile">
 				</div>
 		    </div>
 		</div>
