--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 							<img src="assets/images/IAN.jpg" alt="Hat" class="index-card-image-source">
 						</div>
 						<div class="card-description">
-							description
+							headwear
 						</div>
 						<div class="card-name">
-							Hat Name
+							Leather Patch 5-Panel
 							<div class="card-price">
 								$20
 							</div>
@@ -206,10 +206,10 @@
 							<img src="assets/images/DSC00227.jpg" alt="Hat" class="index-card-image-source">
 						</div>
 						<div class="card-description">
-							description
+							accesories
 						</div>
 						<div class="card-name">
-							Classic Patch
+							HydroFlask 32oz
 							<div class="card-price">
 								$30
 							</div>
@@ -221,10 +221,10 @@
 							<img src="assets/images/WP9A0791.jpg" alt="Hat" class="index-card-image-source">
 						</div>
 						<div class="card-description">
-							description
+							apparel
 						</div>
 						<div class="card-name">
-							Hat Name
+							Ride the Tetons Tee
 							<div class="card-price">
 								$20
 							</div>
@@ -235,12 +235,12 @@
 							<img src="assets/images/4045-BK-Lifestyleshot.jpg" alt="Hat" class="index-card-image-source">
 						</div>
 						<div class="card-description">
-							description
+							headwear
 						</div>
 						<div class="card-name">
-							Classic Patch
+							Alpine Cap
 							<div class="card-price">
-								$30
+								$20
 							</div>
 						</div>
 					</div>
@@ -250,10 +250,10 @@
 							<img src="assets/images/ACCESSORIES.jpg" alt="Hat" class="index-card-image-source">
 						</div>
 						<div class="card-description">
-							description
+							apparel 
 						</div>
 						<div class="card-name">
-							Hat Name
+							Let's Go America Socks
 							<div class="card-price">
 								$20
 							</div>
@@ -264,12 +264,12 @@
 							<img src="assets/images/738A0532.JPG" alt="Hat" class="index-card-image-source">
 						</div>
 						<div class="card-description">
-							description
+							headwear
 						</div>
 						<div class="card-name">
-							Classic Patch
+							Alpine Cap
 							<div class="card-price">
-								$30
+								$20
 							</div>
 						</div>
 					</div>
@@ -407,7 +407,6 @@ End Section Two-->
 		<p class="explore-nav2">Lookbooks</p>
 	</div>
 	<div class="explore-area">
-		<!--<img src="assets/images/bikerbackground.JPG" alt="Background Image" class="explore-background">-->
 		<img src="assets/images/bikerimage.JPG" alt="Main Image" class="explore-image">
 		<div class="sidebar">Lookbook
 			<div class="sidebar-title">Summer Styles: Part 1
